--- a/springcloud_integration/api-gateway/pom.xml
+++ b/springcloud_integration/api-gateway/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.yt</groupId>
 	<artifactId>api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>apiGateway</name>
+	<name>api-gateway</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
