--- a/springcloud_integration/pom.xml
+++ b/springcloud_integration/pom.xml
@@ -43,11 +43,16 @@
 	<packaging>pom</packaging>
 	<modules>
 		
-		<module>dataExchange</module>
+		
 		<module>register_center</module>
 		<module>sidecar</module>
-		<module>uniPlatform</module>
+		
 		<module>zipkin-server</module>
-		<module>apiGateway</module>
+
+
+
+		<module>api-gateway</module>
+		<module>data-exchange</module>
+		<module>uni-platform</module>
 	</modules>
 </project>
