--- a/springcloud_integration/register_center/pom.xml
+++ b/springcloud_integration/register_center/pom.xml
@@ -10,8 +10,8 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.zj</groupId>
-	<artifactId>register_center</artifactId>
-	<name>register_center</name>
+	<artifactId>register-center</artifactId>
+	<name>register-center</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
