--- a/springcloud_integration/uni-platform/pom.xml
+++ b/springcloud_integration/uni-platform/pom.xml
@@ -102,10 +102,19 @@
 			</plugin>
 		</plugins>
 		
-	    <resources>
-	        <resource>
+   	    <resources>
+           <resource>
 	           <directory>src/main/java</directory>
-	        </resource>     
+               <includes>
+                   <include>**/*.xml</include>
+               </includes>
+	        </resource> 
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>     
 	    </resources>
 	</build>
 
