--- a/springcloud_integration/zipkin-server/pom.xml
+++ b/springcloud_integration/zipkin-server/pom.xml
@@ -85,9 +85,18 @@
 		</plugins>
 		
 	    <resources>
-	        <resource>
+           <resource>
 	           <directory>src/main/java</directory>
-	        </resource>     
+               <includes>
+                   <include>**/*.xml</include>
+               </includes>
+	        </resource> 
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>     
 	    </resources>
 	</build>
 
