--- a/springcloud_integration/data-exchange/pom.xml
+++ b/springcloud_integration/data-exchange/pom.xml
@@ -110,6 +110,21 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
+	    <resources>
+           <resource>
+	           <directory>src/main/java</directory>
+               <includes>
+                   <include>**/*.xml</include>
+               </includes>
+	        </resource> 
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>     
+	    </resources>
 	</build>
 
 
