--- a/springcloud_integration/api-gateway/pom.xml
+++ b/springcloud_integration/api-gateway/pom.xml
@@ -67,7 +67,7 @@
     		<artifactId>fastjson</artifactId>
     		<version>1.2.46</version>
 		</dependency>
-<!-- 		
+ 		
         <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
@@ -76,7 +76,7 @@
 		<dependency> 
 			<groupId>org.springframework.cloud</groupId> 
 			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
-		</dependency> -->
+		</dependency>
 		
 	</dependencies>
 	
