--- a/springcloud_integration/data-exchange/pom.xml
+++ b/springcloud_integration/data-exchange/pom.xml
@@ -89,6 +89,13 @@
 			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>25.1-jre</version>
+		</dependency>
+		
+		
 	</dependencies>
 	
 	<dependencyManagement>
